# lukapp

./: .gitignore  Makefile  README.md  coursecodes.csv  elm-package.json  elm.json  extract.py  index.html  package.json  pyproject.toml  webpack.config.js
site/: Main.elm  SiteData.template.elm  Specializations.template.elm  TableData.template.elm  app.js  elm-package.json  elm.json  generate.py  index.html  index.js  package.json  style.css  webpack.config.js
site/Page/: CourseTable.elm
site/src/: Main.elm  SiteData.template.elm
site/src/Page/: CourseTable.elm
src/: ceq.py  extract.py  util.py
