[tool.poetry]
name = "lukapp"
version = "0.1.0"
description = "Fast and flexible filtering, sorting and comparison of LTH courses"
authors = ["Johannes Ahnlide <johannes@voxel.se>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.1"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
